# python-dns

./: CHANGELOG.md  CONTRIBUTING.rst  README.rst  noxfile.py  owlbot.py  pyproject.toml  pytest.ini  setup.py  synth.metadata  synth.py
.kokoro/: publish-docs.sh  release.sh
.kokoro/docker/docs/: requirements.txt
.kokoro/docs/: common.cfg
.kokoro/presubmit/: presubmit.cfg
.kokoro/release/: common.cfg
.librarian/: state.yaml
docs/: conf.py  index.rst
google/cloud/dns/: changes.py  resource_record_set.py  version.py  zone.py
tests/system/: system.py  test_system.py
tests/unit/: test_changes.py  test_client.py  test_resource_record_set.py  test_zone.py
