# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-cloud-dns"
authors = [{ name = "Google LLC", email = "googleapis-packages@google.com" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.7"
description = "Google Cloud DNS API client library"
readme = "README.rst"
classifiers = [
  # Should be one of:
  # "Development Status :: 3 - Alpha"
  # "Development Status :: 4 - Beta"
  # "Development Status :: 5 - Production/Stable"
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Internet",
]
dependencies = [
  # NOTE: Maintainers, please do not require google-cloud-core>=2.x.x
  # Until this issue is closed
  # https://github.com/googleapis/google-cloud-python/issues/10566
  "google-cloud-core >= 1.4.4, < 3.0dev",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/googleapis/python-dns"

[project.optional-dependencies]

[tool.setuptools]

[tool.setuptools.dynamic]
version = { attr = "google.cloud.dns.version.__version__" }

[tool.setuptools.packages.find]
include = ["google*"]
